--- a/test/fixtures/users.yml
+++ b/test/fixtures/users.yml
@@ -4,8 +4,14 @@
 # model remove the '{}' from the fixture names and add the columns immediately
 # below each fixture, per the syntax in the comments below
 #
-one: {}
+one: 
+  username: testable
+  password_digest: testable
+  session_token: testable
 # column: value
 #
-two: {}
+two: 
+  username: testable
+  password_digest: testable
+  session_token: testable
 # column: value
